--- a/Language/packs/parkour_de.yml
+++ b/Language/packs/parkour_de.yml
@@ -135,7 +135,7 @@
 "acceptInvite": "Einladung annehmen"
 "requestedInvite": "Anfrage an <player> gesendet."
 "playerWantsToJoin": "<player> möchte der Party beitreten."
-"invitePlayerButton": "<player> in die Party einladen"
+"invitePlayerButton": "<player> einladen"
 "clickHereToInvite": "Klicke hier, um <player>\nin deine Party einzuladen."
 "youAreInThisPartyAlready": "Du bist schon in dieser Party."
 "youAreAlreadyInAParty": "Du bist schon in einer anderen Party."
@@ -144,7 +144,7 @@
 "playerJoinedTheParty": "<player> ist der Party beigetreten."
 "partyIsAtAnotherMap": "Die Party findet auf einer anderen Map statt."
 "toMapOfTheParty": "Zur Karte der Party teleportieren"
-"clickHereToTeleportToTheParty": "Klicke hier, um dich zur\nKarte der Party zu teleportieren."
+"clickHereToTeleportToTheParty": "Klicke hier, um dich zur Karte\nder Party zu teleportieren."
 "youCanNotKickYourself": "Du kannst dich nicht selbst kicken, verlasse dazu die Party."
 "youAreNotInAParty": "Du bist in keiner Party."
 "youHaveBeenKickedBy": "Du wurdest von <player> gekickt."
@@ -154,3 +154,4 @@
 "playerLeftTheGame": "<player> hat das Spiel verlassen."
 "partyHasDissolved": "Die Party hat sich aufgelöst."
 "playerIsNowLeadingParty": "<player> leitet jetzt die Party."
+"youKickedPlayer": "Du hast <player> gekickt."
