--- a/Language/packs/parkour_de.yml
+++ b/Language/packs/parkour_de.yml
@@ -155,3 +155,4 @@
 "partyHasDissolved": "Die Party hat sich aufgelöst."
 "playerIsNowLeadingParty": "<player> leitet jetzt die Party."
 "youKickedPlayer": "Du hast <player> gekickt."
+"playerIsAlreadyInYourParty": "<player> ist bereits in deiner Party."
