--- a/Language/packs/parkour_de.yml
+++ b/Language/packs/parkour_de.yml
@@ -156,3 +156,4 @@
 "playerIsNowLeadingParty": "<player> leitet jetzt die Party."
 "youKickedPlayer": "Du hast <player> gekickt."
 "playerIsAlreadyInYourParty": "<player> ist bereits in deiner Party."
+"leaderSwichtedMaps": "Der Party Leader hat die Karte gewechselt."
