--- a/Language/packs/parkour_de.yml
+++ b/Language/packs/parkour_de.yml
@@ -1,4 +1,5 @@
-"currencyName": "Kristalle"
+"currencyNamePlural": "Kristalle"
+"currencyName": "Kristall"
 "xpName": "Erfahrung"
 "startblock": "Start Block"
 "endblock": "Ende Block"
@@ -159,4 +160,5 @@
 "youKickedPlayer": "Du hast <player> gekickt."
 "playerIsAlreadyInYourParty": "<player> ist bereits in deiner Party."
 "leaderSwichtedMaps": "Der Party Leader hat die Karte gewechselt."
+"youGotRewards": "Du hast <currencyAmount> %{parkour/currencyName}% und <xpAmount> %{parkour/xpName}% erhalten."
 "youGotReward": "Du hast <currencyAmount> %{parkour/currencyName}% und <xpAmount> %{parkour/xpName}% erhalten."
