--- a/Language/packs/parkour_de.yml
+++ b/Language/packs/parkour_de.yml
@@ -1,5 +1,6 @@
 "currencyNamePlural": "Kristalle"
 "currencyName": "Kristall"
+"xpNamePlural": "Erfahrung"
 "xpName": "Erfahrung"
 "startblock": "Start Block"
 "endblock": "Ende Block"
@@ -160,5 +161,5 @@
 "youKickedPlayer": "Du hast <player> gekickt."
 "playerIsAlreadyInYourParty": "<player> ist bereits in deiner Party."
 "leaderSwichtedMaps": "Der Party Leader hat die Karte gewechselt."
-"youGotRewards": "Du hast <currencyAmount> %{parkour/currencyName}% und <xpAmount> %{parkour/xpName}% erhalten."
+"youGotRewards": "Du hast <currencyAmount> %{parkour/currencyNamePlural}% und <xpAmount> %{parkour/xpNamePlural}% erhalten."
 "youGotReward": "Du hast <currencyAmount> %{parkour/currencyName}% und <xpAmount> %{parkour/xpName}% erhalten."
