Added price to new map item lore

--- a/Language/packs/parkour_de.yml
+++ b/Language/packs/parkour_de.yml
@@ -2,6 +2,7 @@
 "currencyName": "Kristall"
 "xpNamePlural": "Erfahrung"
 "xpName": "Erfahrung"
+"loreLine": "&7&m------------------"
 "startblock": "Start Block"
 "endblock": "Ende Block"
 "checkpointblock": "Checkpoint Block"
@@ -123,7 +124,7 @@
 "newParkour": "Neuer Parkour"
 "mapItemLoreNoVisits": "&7Bewertung: &6<rating>\n&7Erstellt: &6<created>"
 "newMapItemName": "Neue Karte erstellen"
-"newMapItemDesc": "Erstellt eine neue Karte."
+"newMapItemDesc": "Erstellt eine neue Karte.\n%{parkour/loreLine}%\n&7Preis: &6&l<price> &7%{parkour/currencyNamePlural}%"
 "todoHeader": "Zu erledigen: &b(Anklickbar)"
 "textClickable": "&bAnklickbarer Text&7\n&7Der Text in dieser\n&7Nachricht ist anklickbar."
 "spawnlocation": "Parkour Spawn setzen"
