--- a/Language/packs/parkour_de.yml
+++ b/Language/packs/parkour_de.yml
@@ -2,7 +2,7 @@
 "currencyName": "Kristall"
 "xpNamePlural": "Erfahrung"
 "xpName": "Erfahrung"
-"loreLine": "&7&m------------------"
+"loreLine": "&7&m---------------------"
 "startblock": "Start Block"
 "endblock": "Ende Block"
 "checkpointblock": "Checkpoint Block"
