--- a/Language/packs/parkour_de.yml
+++ b/Language/packs/parkour_de.yml
@@ -64,7 +64,7 @@
 "somethingWentHorriblyWrongError": "Es gab einen schwerwiegenden Fehler."
 "toCheckpointItem": "Zum Checkpoint"
 "toplistHeader": "■ Topliste\n"
-"clickToCompeteGhost": "&6Gegen Geist antreten&r\n&rKlicke hier, um gegen den\nGeist dieser Zeit anzutreten."
+"clickToCompeteGhost": "&6Gegen Geist antreten&r\n&r&7Klicke hier, um gegen den\n&7Geist dieser Zeit anzutreten."
 "noEntriesYet": "Noch keine Einträge."
 "startblockremoved": "Start Block abgebaut."
 "checkpointblockremoved": "Checkpoint Block abgebaut."
