--- a/Language/packs/parkour_de.yml
+++ b/Language/packs/parkour_de.yml
@@ -165,3 +165,4 @@
 "youGotRewards": "Du hast <currencyAmount> %{parkour/currencyNamePlural}% und <xpAmount> %{parkour/xpNamePlural}% erhalten."
 "youGotReward": "Du hast <currencyAmount> %{parkour/currencyName}% und <xpAmount> %{parkour/xpName}% erhalten."
 "notEnoughCurrencyYouNeedMore": "&7Nicht genug %{parkour/currencyNamePlural}%, du brauchst noch &6&l<needed>&7."
+"parkourDiffForced": "&7Die Schwierigkeit für diese Map wird jetzt erzwungen."
