--- a/Language/packs/parkour_de.yml
+++ b/Language/packs/parkour_de.yml
@@ -167,3 +167,7 @@
 "notEnoughCurrencyYouNeedMore": "&7Nicht genug %{parkour/currencyNamePlural}%, du brauchst noch &6&l<needed>&7."
 "parkourDiffForced": "&7Die Schwierigkeit für diese Map wird jetzt erzwungen."
 "parkourDiffNoLongerForced": "&7Die Schwierigkeit für diese Map wird nicht länger erwzungen."
+"selectRunInToplistToView": "Wähle einen Run in der Topliste aus, um diesen anzusehen."
+"startReplayItemName": "Replay starten"
+"enableSpectatorItemName": "Zuschauermodus aktivieren"
+"disableSpectatorItemName": "Zuschauermodus verlassen"
