--- a/Language/packs/parkour_de.yml
+++ b/Language/packs/parkour_de.yml
@@ -171,3 +171,4 @@
 "startReplayItemName": "Replay starten"
 "enableSpectatorItemName": "Zuschauermodus aktivieren"
 "disableSpectatorItemName": "Zuschauermodus verlassen"
+"couldNotFindRun": "Konnte diesen Run nicht finden."
