--- a/Language/packs/parkour_de.yml
+++ b/Language/packs/parkour_de.yml
@@ -176,3 +176,4 @@
 "reallyReportThisPlayer": "Willst du <reportedUser> wirklich melden?"
 "reportUserBtn": "<reportedUser> melden"
 "reportUserBtnHover": "Klicke hier, um den Run\nvon <reportedUser> zu melden."
+"youAlreadyReported": "Du hast diesen Run schon gemeldet."
