--- a/Language/packs/parkour_de.yml
+++ b/Language/packs/parkour_de.yml
@@ -82,7 +82,11 @@
 "buildMode": "Baumodus"
 "testMode": "Testmodus"
 "public": "Öffentlich"
-"startParkourToCompeteGhost": "Starte den Parkour, um gegen den Geist zu laufen."
+"startParkourToCompeteGhost": "Du hast den Run von <replayUser> ausgewählt."
+"reportRunBtn": "&c[Run melden]"
+"reportBtnHover": "&7Klicke hier, um diesen\n&7Run zu melden."
+"copyRunCmdBtn": "&c[Run melden]"
+"copyRunCmdBtnHover": "&7Klicke hier, um den Link\n&7zu diesem Run zu kopieren."
 "testRunSolved": "Testlauf abgeschlossen."
 "publishParkourCmd": "Parkour veröffentlichen: /parkour publish"
 "parkourRenamedTo": "Der Parkour wurde in <name> benannt."
