--- a/Language/packs/parkour_de.yml
+++ b/Language/packs/parkour_de.yml
@@ -83,9 +83,9 @@
 "testMode": "Testmodus"
 "public": "Öffentlich"
 "startParkourToCompeteGhost": "Du hast den Run von <replayUser> ausgewählt."
-"reportRunBtn": "&cRun melden"
+"reportRunBtn": "Run melden"
 "reportBtnHover": "&7Klicke hier, um diesen\n&7Run zu melden."
-"copyRunCmdBtn": "&cRun Link kopieren"
+"copyRunCmdBtn": "Run Link kopieren"
 "copyRunCmdBtnHover": "&7Klicke hier, um den Link\n&7zu diesem Run zu kopieren."
 "testRunSolved": "Testlauf abgeschlossen."
 "publishParkourCmd": "Parkour veröffentlichen: /parkour publish"
