--- a/Language/packs/parkour_de.yml
+++ b/Language/packs/parkour_de.yml
@@ -185,3 +185,8 @@
 "myRunsMenuName": "Meine Runs"
 "playerMapsMenuName": "Karten von <player>"
 "playerRunsMenuName": "Runs von <player>"
+"maps": "Karten"
+"mapsItemMenuHover": "Klicke hier, um die\nKarten anzuzeigen."
+"runs": "Runs"
+"runsItemMenuHover": "Klicke hier, um die\nRuns anzuzeigen."
+
