--- a/Language/packs/parkour_de.yml
+++ b/Language/packs/parkour_de.yml
@@ -189,4 +189,5 @@
 "mapsItemMenuHover": "Klicke hier, um die\nKarten anzuzeigen."
 "runs": "Runs"
 "runsItemMenuHover": "Klicke hier, um die\nRuns anzuzeigen."
-
+"settingsItem": "Einstellungen"
+"settingsItemMenuHover": "Klicke hier, um die\nEinstellungen anzuzeigen."
