--- a/Language/packs/parkour_de.yml
+++ b/Language/packs/parkour_de.yml
@@ -59,6 +59,7 @@
 "sideBar": "Seitenleiste"
 "bossBar": "Bossleiste"
 "actionBar": "Aktionsleiste"
+"topListHologram": "Toplisten Hologram"
 "clickToToggleBar": "Klicke hier, um die <bar>\nzu aktivieren oder deaktivieren."
 "abortedRunParkourIsInBuildMode": "Testlauf abgebrochen, der Parkour ist im Baumodus."
 "somethingWentHorriblyWrongError": "Es gab einen schwerwiegenden Fehler."
@@ -189,5 +190,5 @@
 "mapsItemMenuHover": "Klicke hier, um die\nKarten anzuzeigen."
 "runs": "Runs"
 "runsItemMenuHover": "Klicke hier, um die\nRuns anzuzeigen."
-"settingsItem": "Einstellungen"
-"settingsItemMenuHover": "Klicke hier, um die\nEinstellungen anzuzeigen."
+"mySettingsItem": "Einstellungen"
+"mySettingsItemMenuHover": "Klicke hier, um die\nEinstellungen anzuzeigen."
