--- a/Language/packs/parkour_de.yml
+++ b/Language/packs/parkour_de.yml
@@ -192,3 +192,5 @@
 "runsItemMenuHover": "Klicke hier, um die\nRuns anzuzeigen."
 "mySettingsItem": "Einstellungen"
 "mySettingsItemMenuHover": "Klicke hier, um die\nEinstellungen anzuzeigen."
+"SettingsItem": "Einstellungen"
+"SettingsItemMenuHover": "Klicke hier, um die\nEinstellungen anzuzeigen."
