--- a/Language/packs/parkour_de.yml
+++ b/Language/packs/parkour_de.yml
@@ -194,3 +194,4 @@
 "mySettingsItemMenuHover": "Klicke hier, um die\nEinstellungen anzuzeigen."
 "SettingsItem": "Einstellungen"
 "SettingsItemMenuHover": "Klicke hier, um die\nEinstellungen anzuzeigen."
+"mySettingsMenuName": "Meine Einstellungen"
