--- a/Language/packs/parkour_de.yml
+++ b/Language/packs/parkour_de.yml
@@ -59,7 +59,7 @@
 "sideBar": "Seitenleiste"
 "bossBar": "Bossleiste"
 "actionBar": "Aktionsleiste"
-"topListHologram": "Toplisten Hologram"
+"topListHolograms": "Toplisten Hologramme"
 "clickToToggleBar": "Klicke hier, um die <bar>\nzu aktivieren oder deaktivieren."
 "abortedRunParkourIsInBuildMode": "Testlauf abgebrochen, der Parkour ist im Baumodus."
 "somethingWentHorriblyWrongError": "Es gab einen schwerwiegenden Fehler."
@@ -192,6 +192,6 @@
 "runsItemMenuHover": "Klicke hier, um die\nRuns anzuzeigen."
 "mySettingsItem": "Einstellungen"
 "mySettingsItemMenuHover": "Klicke hier, um die\nEinstellungen anzuzeigen."
-"SettingsItem": "Einstellungen"
-"SettingsItemMenuHover": "Klicke hier, um die\nEinstellungen anzuzeigen."
+"settingsItem": "Einstellungen"
+"settingsItemMenuHover": "Klicke hier, um die\nEinstellungen anzuzeigen."
 "mySettingsMenuName": "Meine Einstellungen"
