Added action card translations

--- a/Language/packs/parkour_de.yml
+++ b/Language/packs/parkour_de.yml
@@ -195,3 +195,12 @@
 "settingsItem": "Einstellungen"
 "settingsItemMenuHover": "Klicke hier, um die\nEinstellungen anzuzeigen."
 "mySettingsMenuName": "Meine Einstellungen"
+"blockHasBeenSavedIntoAction": "Der Block wurde in der Aktion gespeichert."
+"putActionItemIntoChest": "Lege das Aktionsitem in eine Truhe."
+"actionNoBlockSelected": "Kein Block gesetzt"
+"actionSelectBlockToSaveIntoAction": "Klicke mit der Aktionskarte\nauf einen Block, um\ndiesen in die Karte zu\nspeichern."
+"actionSetTemporaryBlockLore": "Ort: <location>\nDauer: <ticks> Ticks\n%{parkour/loreLine}%\nDauer erhöhen: &6&lLinksklick\nDauer verringern: &6&lRechtsklick"
+"actionCard": "Aktionskarte:"
+"SETTEMPORARYBLOCK": "Temporärer Block"
+"actionCardInformation": "&r&f&lInformation"
+"actionCardInfoText": "Ein Block, der nach der\nDauer verschwindet.\n%{parkour/loreLine}%\nKlicke mit der Aktionskarte\nauf einen Block, während du\nschleichst, um den Block\nzu setzen."
