--- a/Language/packs/parkour_de.yml
+++ b/Language/packs/parkour_de.yml
@@ -198,9 +198,9 @@
 "blockHasBeenSavedIntoAction": "Der Block wurde in der Aktion gespeichert."
 "putActionItemIntoChest": "Lege das Aktionsitem in eine Truhe."
 "actionNoBlockSelected": "Kein Block gesetzt"
-"actionSelectBlockToSaveIntoAction": "Klicke mit der Aktionskarte\nauf einen Block, um\ndiesen in die Karte zu\nspeichern."
-"actionSetTemporaryBlockLore": "Ort: <location>\nDauer: <ticks> Ticks\n%{parkour/loreLine}%\nDauer erhöhen: &6&lLinksklick\nDauer verringern: &6&lRechtsklick"
+"actionCardInfoSETTEMPORARYBLOCK": "Klicke mit der Aktionskarte\nauf einen Block, während\ndu schleichst, um den\nBlock in der Karte zu speichern."
+"actionSetTemporaryBlockLore": "Ort: <location>\nDauer: <ticks> Ticks\n%{parkour/loreLine}%\nDauer ▲: &6&lLinksklick\nDauer ▼: &6&lRechtsklick"
 "actionCard": "Aktionskarte:"
 "SETTEMPORARYBLOCK": "Temporärer Block"
 "actionCardInformation": "&r&f&lInformation"
-"actionCardInfoText": "Ein Block, der nach der\nDauer verschwindet.\n%{parkour/loreLine}%\nKlicke mit der Aktionskarte\nauf einen Block, während du\nschleichst, um den Block\nzu setzen."
+"actionCardInfoText": "Ein Block, der nach der\nDauer verschwindet.\n%{parkour/loreLine}%\n%{parkour/actionCardInfoSETTEMPORARYBLOCK}%"
