--- a/Language/packs/parkour_de.yml
+++ b/Language/packs/parkour_de.yml
@@ -198,9 +198,13 @@
 "blockHasBeenSavedIntoAction": "Der Block wurde in der Aktion gespeichert."
 "putActionItemIntoChest": "Lege das Aktionsitem in eine Truhe."
 "actionNoBlockSelected": "Kein Block gesetzt"
-"actionCardInfoSETTEMPORARYBLOCK": "Klicke mit der Aktionskarte\nauf einen Block, während\ndu schleichst, um den\nBlock in der Karte zu\nspeichern."
-"actionSetTemporaryBlockLore": "Ort: <location>\nDauer: <ticks> Ticks\n%{parkour/loreLine}%\nDauer ▲: &6&lLinksklick\nDauer ▼: &6&lRechtsklick"
 "actionCard": "Aktionskarte:"
-"SETTEMPORARYBLOCK": "Temporärer Block"
 "actionCardInformation": "&r&f&lInformation"
-"actionCardInfoText": "Ein Block, der nach der\nDauer verschwindet.\n%{parkour/loreLine}%\n%{parkour/actionCardInfoSETTEMPORARYBLOCK}%"
+"SETTEMPORARYBLOCK": "Temporärer Block"
+"actionLoreSETTEMPORARYBLOCK": "Ort: <location>\nDauer: <ticks> Ticks\n%{parkour/loreLine}%\nDauer ▲: &6&lLinksklick\nDauer ▼: &6&lRechtsklick"
+"actionCardInfoSETTEMPORARYBLOCK": "Klicke mit der Aktionskarte\nauf einen Block, während\ndu schleichst, um den\nBlock in der Karte zu\nspeichern."
+"actionCardInfoTextSETTEMPORARYBLOCK": "Ein Block, der nach der\nDauer verschwindet.\n%{parkour/loreLine}%\n%{parkour/actionCardInfoSETTEMPORARYBLOCK}%"
+"SETBLOCK": "Block"
+"actionLoreSETBLOCK": "Ort: <location>\n"
+"actionCardInfoSETBLOCK": "Klicke mit der Aktionskarte\nauf einen Block, während\ndu schleichst, um den\nBlock in der Karte zu\nspeichern."
+"actionCardInfoTextSETBLOCK": "Ein Block, der nach der an\neinem Ort platziert wird.\n%{parkour/loreLine}%\n%{parkour/actionCardInfoSETBLOCK}%"
