Added WAIT action card translation

--- a/Language/packs/parkour_de.yml
+++ b/Language/packs/parkour_de.yml
@@ -207,4 +207,8 @@
 "SETBLOCK": "Block"
 "actionLoreSETBLOCK": "Ort: <location>"
 "actionCardInfoSETBLOCK": "Klicke mit der Aktionskarte\nauf einen Block, während\ndu schleichst, um den\nBlock in der Karte zu\nspeichern."
-"actionCardInfoTextSETBLOCK": "Ein Block, der nach der an\neinem Ort platziert wird.\n%{parkour/loreLine}%\n%{parkour/actionCardInfoSETBLOCK}%"
+"actionCardInfoTextSETBLOCK": "Ein Block, der an einem\nOrt platziert wird.\n%{parkour/loreLine}%\n%{parkour/actionCardInfoSETBLOCK}%"
+"WAIT": "Warten"
+"actionLoreWAIT": "Dauer: <ticks> Ticks\n%{parkour/loreLine}%\nDauer ▲: &6&lLinksklick\nDauer ▼: &6&lRechtsklick"
+"actionCardInfoWAIT": "Klicke mit der Aktionskarte,\num das Menü zu öffnen.\nLässt den Aktionsblock um die\ngewählten Ticks warten."
+"actionCardInfoTextWAIT": "Lässt den Aktionsblock warten.\n%{parkour/loreLine}%\n%{parkour/actionCardInfoWAIT}%"
