--- a/Language/packs/parkour_de.yml
+++ b/Language/packs/parkour_de.yml
@@ -221,3 +221,21 @@
 "actionCardInfoTextVELOCITY": "Gibt einem Spieler Schwung.\n%{parkour/loreLine}%\n%{parkour/actionCardInfoVELOCITY}%"
 "velocityCoordinateChangeInfo": "Setze die Stärke des\nSchwungs für diese Achse.\n%{parkour/loreLine}%\nStärke: &6&l<axisStrength>\n%{parkour/loreLine}%\nStärke ▲: &6&lLinksklick\nStärke ▼: &6&lRechtsklick"
 "velocityCoordinate": "<axis> Koordinate"
+"PlatformsMaximumLocationsReached": "Du hast die maximale Anzahl an Keyframes erreicht."
+"PlatformsLocationAdded": "Ein Keyframe wurde hinzugefügt."
+"PlatformKeyframe": "Keyframe"
+"PlatformKeyframeLore": "Ort: <location>\n%{parkour/loreLine}%\nKlicke hier, um diesen\nKeyframe zu löschen."
+"PlatformStartYItemName": "Y Koordinate"
+"PlatformStartYLore": "Startkoordinate: &6&l<y>\n%{parkour/loreLine}%\nPlattformen können sich\nnicht nach oben oder unten\nbewegen, lege die Position fest.\n%{parkour/loreLine}%\nY ▲: &6&lLinksklick\nY ▼: &6&lRechtsklick"
+"PlatformSpeedItem": "Geschwindigkeit"
+"PlatformSpeedLore": "Geschwindigkeit: <speed>\n%{parkour/loreLine}%\nPasst die Geschwindigkeit\nder Plattform an.\n%{parkour/loreLine}%\nGeschwindigkeit ▲: &6&lLinksklick\nGeschwindigkeit ▼: &6&lRechtsklick"
+"PlatformModeItemName": "Bewegungsmodus"
+"PlatformModeItemLore": "Modus: &6&l<mode>\n%{parkour/loreLine}%\nÄndere die Bewegungs-\nlinie der Plattform."
+"PlatformLinearModeName": "Verhalten"
+"PlatformLinearModeRESET": "Neustart nach Abschluss"
+"PlatformLinearModeBACKANDFORTH": "Hin und her"
+"PlatformLinearModeLore": "Verhalten: &6&l<mode>\n%{parkour/loreLine}%\nÄndert das Verhalten\nder Plattform am Ende."
+"PlatformBezierModeName": "Verhalten"
+"PlatformBezierModeCLOSED": "Kreisend"
+"PlatformBezierModeOPEN": "Offen"
+"PlatformBezierModeLore": "Verhalten: &6&l<mode>\n%{parkour/loreLine}%\nEntscheidet, ob die Plattform\neinen Rundkurs macht\noder zurück fährt."
