Changed blocking lore translation

--- a/Language/packs/parkour_de.yml
+++ b/Language/packs/parkour_de.yml
@@ -213,7 +213,7 @@
 "actionCardInfoWAIT": "Klicke mit der Aktionskarte,\num das Menü zu öffnen.\nLässt den Aktionsblock um die\ngewählten Ticks warten."
 "actionCardInfoTextWAIT": "Lässt den Aktionsblock warten.\n%{parkour/loreLine}%\n%{parkour/actionCardInfoWAIT}%"
 "actionCardBlocking": "Blockierend"
-"actionCardBlockingInfo": "Wenn die Aktionskarte blockierend\nist, wird diese den Aktions-\nblock anhalten, bis die Aktion\nabgeschlossen ist."
+"actionCardBlockingInfo": "Wenn die Aktionskarte\nblockierend ist, wird\ndiese den Aktions-\nblock anhalten, bis die\nAktionabgeschlossen ist.""
 "actionCardDisabled": "Deaktiviert"
 "actionCardEnabled": "Aktiviert"
 "VELOCITY": "Schwung"
