Fixed Grammar & yaml syntax

--- a/Language/packs/parkour_de.yml
+++ b/Language/packs/parkour_de.yml
@@ -213,7 +213,7 @@
 "actionCardInfoWAIT": "Klicke mit der Aktionskarte,\num das Menü zu öffnen.\nLässt den Aktionsblock um die\ngewählten Ticks warten."
 "actionCardInfoTextWAIT": "Lässt den Aktionsblock warten.\n%{parkour/loreLine}%\n%{parkour/actionCardInfoWAIT}%"
 "actionCardBlocking": "Blockierend"
-"actionCardBlockingInfo": "Wenn die Aktionskarte\nblockierend ist, wird\ndiese den Aktions-\nblock anhalten, bis die\nAktionabgeschlossen ist."
+"actionCardBlockingInfo": "Wenn die Aktionskarte\nblockierend ist, wird\ndiese den Aktionsblock\nanhalten, bis dieAktion\nabgeschlossen ist."
 "actionCardDisabled": "Deaktiviert"
 "actionCardEnabled": "Aktiviert"
 "VELOCITY": "Schwung"
@@ -223,7 +223,7 @@
 "velocityCoordinate": "<axis> Koordinate"
 "PLATFORM": "Plattform"
 "actionCardInfoPLATFORM": "Erschafft eine bewegliche\nPlattform, auf der\nsich Spieler bewegen können."
-"actionCardInfoTextPLATFORM": Schleiche und klicke,\num einen Keyframe hinzuzufügen.\nKlicke normal ohne\nschleichen, um das Menü zu öffnen.\n%{parkour/loreLine}%\n%{parkour/actionCardInfoPLATFORM}%"
+"actionCardInfoTextPLATFORM": "Schleiche und klicke,\num einen Keyframe hinzuzufügen.\nKlicke normal ohne\nschleichen, um das Menü zu öffnen.\n%{parkour/loreLine}%\n%{parkour/actionCardInfoPLATFORM}%"
 "PlatformsMaximumLocationsReached": "Du hast die maximale Anzahl an Keyframes erreicht."
 "PlatformsLocationAdded": "Ein Keyframe wurde hinzugefügt."
 "PlatformKeyframe": "Keyframe"
