--- a/Language/packs/parkour_de.yml
+++ b/Language/packs/parkour_de.yml
@@ -223,7 +223,7 @@
 "velocityCoordinate": "<axis> Koordinate"
 "PLATFORM": "Plattform"
 "actionCardInfoPLATFORM": "Erschafft eine bewegliche\nPlattform, auf der\nsich Spieler bewegen können."
-"actionCardInfoTextPLATFORM": "Schleiche und klicke,\num einen Keyframe hinzuzufügen.\nKlicke normal ohne\nschleichen, um das Menü zu öffnen.\n%{parkour/loreLine}%\n%{parkour/actionCardInfoPLATFORM}%"
+"actionCardInfoTextPLATFORM": "Schleichen + Rechtsklick,\num einen Keyframe hinzuzufügen.\n%{parkour/loreLine}%\nSchleichen + Linksklick,\num den Plattformblock\nzu ändern.\n%{parkour/loreLine}%\nKlicke normal ohne\nschleichen, um das Menü zu öffnen.\n%{parkour/loreLine}%\n%{parkour/actionCardInfoPLATFORM}%"
 "PlatformsMaximumLocationsReached": "Du hast die maximale Anzahl an Keyframes erreicht."
 "PlatformsLocationAdded": "Ein Keyframe wurde hinzugefügt."
 "PlatformKeyframe": "Keyframe"
@@ -242,3 +242,4 @@
 "PlatformBezierModeCLOSED": "Kreisend"
 "PlatformBezierModeOPEN": "Neustart nach Abschluss"
 "PlatformBezierModeLore": "Verhalten:\n&6&l<mode>\n%{parkour/loreLine}%\nEntscheidet, ob die Platt-\n form einen Rundkurs\nmacht oder nicht."
+"PlatformTypeChanged": "Plattform Block geändert."
