--- a/Language/packs/parkour_de.yml
+++ b/Language/packs/parkour_de.yml
@@ -243,3 +243,5 @@
 "PlatformBezierModeOPEN": "Neustart nach Abschluss"
 "PlatformBezierModeLore": "Verhalten:\n&6&l<mode>\n%{parkour/loreLine}%\nEntscheidet, ob die Platt-\n form einen Rundkurs\nmacht oder nicht."
 "PlatformTypeChanged": "Plattform Block geändert."
+"PlatformLoopModeName": "Schleife"
+"PlatformLoopModeLore": "<mode>\n%{parkour/loreLine}%\nIst die Schleife aktiv,\nwird die Plattform ihren\nPfad unendlich lange verfolgen."
