Added translation for stop & repeat action card

--- a/Language/packs/parkour_de.yml
+++ b/Language/packs/parkour_de.yml
@@ -213,7 +213,7 @@
 "actionCardInfoWAIT": "Klicke mit der Aktionskarte,\num das Menü zu öffnen.\nLässt den Aktionsblock um die\ngewählten Ticks warten."
 "actionCardInfoTextWAIT": "Lässt den Aktionsblock warten.\n%{parkour/loreLine}%\n%{parkour/actionCardInfoWAIT}%"
 "actionCardBlocking": "Blockierend"
-"actionCardBlockingInfo": "Wenn die Aktionskarte\nblockierend ist, wird\ndiese den Aktionsblock\nanhalten, bis dieAktion\nabgeschlossen ist."
+"actionCardBlockingInfo": "Wenn die Aktionskarte\nblockierend ist, wird\ndiese den Aktionsblock\nanhalten, bis die Aktion\nabgeschlossen ist."
 "actionCardDisabled": "Deaktiviert"
 "actionCardEnabled": "Aktiviert"
 "VELOCITY": "Schwung"
@@ -245,3 +245,9 @@
 "PlatformTypeChanged": "Plattform Block geändert."
 "PlatformLoopModeName": "Schleife"
 "PlatformLoopModeLore": "<mode>\n%{parkour/loreLine}%\nIst die Schleife aktiv, wird\ndie Plattform ihren Pfad\nunendlich lange verfolgen."
+"STOP": "Stopper"
+"actionCardInfoSTOP": "Stoppt den Aktionsblock,\nwenn diese Aktionskarte\nausgeführt wird."
+"actionCardInfoTextSTOP": "%{parkour/actionCardInfoSTOP}%"
+"REPEAT": "Wiederholen"
+"actionCardInfoREPEAT": "Startet den Aktionsblock\nerneut von vorne."
+"actionCardInfoTextREPEAT": "%{parkour/actionCardInfoSTOP}%"
