--- a/Language/packs/parkour_de.yml
+++ b/Language/packs/parkour_de.yml
@@ -251,3 +251,8 @@
 "REPEAT": "Wiederholen"
 "actionCardInfoREPEAT": "Startet den Aktionsblock\nerneut von vorne."
 "actionCardInfoTextREPEAT": "%{parkour/actionCardInfoSTOP}%"
+"PotionSelectionLore": "Klicke auf den Trank,\num diesen für diese\nAktionskarte zu aktivieren."
+"POTION": "Verzauberung"
+"actionCardInfoPOTION": "Gibt dem Spieler eine,\nVerzauberung, sofern keine\nVerzauberung gewählt ist,\nwerden alle vom Spieler\nwieder entfernt."
+"actionCardInfoTextPOTION": "%{parkour/actionCardInfoPOTION}%"
+"PotionLore": "Dauer: &6&l<duration>\nStärke: &6&l<strength>\n%{parkour/loreLine}%\n%{parkour/loreLine}%\nDauer ▲: &6&lLinksklick\nDauer ▼: &6&lRechtsklick\n%{parkour/loreLine}%\nStärke ▲: &6&lShift + Linksklick\nStärke ▼: &6&lShift + Rechtsklick"
