--- a/Language/packs/parkour_de.yml
+++ b/Language/packs/parkour_de.yml
@@ -256,3 +256,5 @@
 "actionCardInfoPOTION": "Gibt dem Spieler eine\nVerzauberung, sofern keine\ngewählt ist, werden alle\n vom Spieler wieder entfernt.\nWenn die Stärke auf 0 gesetzt ist,\nwird nur der definierte\nTrank wieder entfernt."
 "actionCardInfoTextPOTION": "%{parkour/actionCardInfoPOTION}%"
 "PotionLore": "Dauer: &6&l<duration> Sekunden\nStärke: &6&l<strength>\n%{parkour/loreLine}%\nDauer ▲: &6&lLinksklick\nDauer ▼: &6&lRechtsklick\n%{parkour/loreLine}%\nStärke ▲: &6&lShift + Linksklick\nStärke ▼: &6&lShift + Rechtsklick"
+"RemovePotionEffect": "Trank entfernen"
+"RemovePotionEffectLore": "Entfernt den Rank von\nder Aktionskarte, eine\nleere Trank Karte wird\nalle Effekte entfernen."
