--- a/Language/packs/parkour_de.yml
+++ b/Language/packs/parkour_de.yml
@@ -258,3 +258,17 @@
 "PotionLore": "Dauer: &6&l<duration> Sekunden\nStärke: &6&l<strength>\n%{parkour/loreLine}%\nDauer ▲: &6&lLinksklick\nDauer ▼: &6&lRechtsklick\n%{parkour/loreLine}%\nStärke ▲: &6&lShift + Linksklick\nStärke ▼: &6&lShift + Rechtsklick"
 "RemovePotionEffect": "Trank entfernen"
 "RemovePotionEffectLore": "Entfernt den Rank von\nder Aktionskarte, eine\nleere Trank Karte wird\nalle Effekte entfernen."
+"weatherActionClear": "Klarer Himmel"
+"weatherActionRain": "Regen"
+"WEATHER": "Wetter"
+"actionCardInfoWEATHER": "Ändert das Wetter."
+"actionCardInfoTextWEATHER": "%{parkour/actionCardInfoWEATHER}%"
+"actionLoreWEATHER": "Wetter: &6&l<weather>\n%{parkour/loreLine}%\nKlicke hier, um das\nWetter der Aktion\nzu ändern."
+"WEATHER": "Wetter"
+"actionCardInfoWEATHER": "Ändert das Wetter."
+"actionCardInfoTextWEATHER": "%{parkour/actionCardInfoWEATHER}%"
+"actionLoreWEATHER": "Wetter: &6&l<weather>\n%{parkour/loreLine}%\nKlicke hier, um das\nWetter der Aktion\nzu ändern."
+"TIME": "Zeit"
+"actionCardInfoWEATHER": "Ändert die Zeit."
+"actionCardInfoTextWEATHER": "%{parkour/actionCardInfoWEATHER}%"
+"actionLoreWEATHER": "Uhrzeit: &6&l<time>\n%{parkour/loreLine}%\nUhrzeit ▲: &6&lLinksklick\nUhrzeit ▼: &6&lRechtsklick"
