--- a/Language/packs/parkour_de.yml
+++ b/Language/packs/parkour_de.yml
@@ -269,6 +269,6 @@
 "actionCardInfoTextWEATHER": "%{parkour/actionCardInfoWEATHER}%"
 "actionLoreWEATHER": "Wetter: &6&l<weather>\n%{parkour/loreLine}%\nKlicke hier, um das\nWetter der Aktion\nzu ändern."
 "TIME": "Zeit"
-"actionCardInfoWEATHER": "Ändert die Zeit."
-"actionCardInfoTextWEATHER": "%{parkour/actionCardInfoWEATHER}%"
-"actionLoreWEATHER": "Uhrzeit: &6&l<time>\n%{parkour/loreLine}%\nUhrzeit ▲: &6&lLinksklick\nUhrzeit ▼: &6&lRechtsklick"
+"actionCardInfoTIME": "Ändert die Zeit."
+"actionCardInfoTextTIME": "%{parkour/actionCardInfoTIME}%"
+"actionLoreTIME": "Uhrzeit: &6&l<time>\n%{parkour/loreLine}%\nUhrzeit ▲: &6&lLinksklick\nUhrzeit ▼: &6&lRechtsklick"
