Added action card translations

--- a/Language/packs/parkour_de.yml
+++ b/Language/packs/parkour_de.yml
@@ -7,7 +7,7 @@
 "endblock": "Ende Block"
 "checkpointblock": "Checkpoint Block"
 "startblockdesc": "&7Markiert den Anfang eines\n&7Parkours, laufe über\n&7diesen Block, um einen\n&7Parkour zu beginnen."
-"checkpointblockdesc": "&7Platziere Checkpoints um\n&7es den Spielern einfacher zu machen."
+"checkpointblockdesc": "&7Platziere Checkpoints um\n&7es den Spielern einfacher\nzu machen."
 "endblockdesc": "&7Markiert das Ende eines\n&7Parkours, laufe über\n&7diesen Block, um einen\n&7Parkour abzuschließen."
 "checkpointblocks": "Checkpoint Blöcke"
 "clicktogetblock": "Klicke hier, um einen\n<block> zu erhalten."
@@ -272,4 +272,26 @@
 "actionCardInfoTIME": "Ändert die Zeit."
 "actionCardInfoTextTIME": "%{parkour/actionCardInfoTIME}%"
 "actionLoreTIME": "Uhrzeit: &6&l<time>\n%{parkour/loreLine}%\nUhrzeit ▲: &6&lLinksklick\nUhrzeit ▼: &6&lRechtsklick"
+"TRIGGER": "Auslöser"
+"actionCardInfoTRIGGER": "Löst einen Aktionsblock,\naus, wenn diese Aktions-\nkarte ausgeführt wird.\nShift + Klick zum setzen."
+"actionCardInfoTextTRIGGER": "%{parkour/actionCardInfoTRIGGER}%"
 "BuildMenuName": "Baumenü"
+"ParkourBlocks": "Parkourblöcke"
+"ParkourBlocksLore": "Zeigt alle Parkourblöcke an."
+"ActionCards": "Aktionskarten"
+"ActionCardsLore": "Zeigt alle Parkourblöcke an."
+"ParkourSettings": "Einstellungen"
+"ParkourSettingsLore": "Zeigt alle Einstellungen an."
+"ActionCardBuildMenuUnlocked": "Freigeschaltet"
+"ActionCardBuildMenuNeedsLevel": "Verfügbar ab Level &6&l<level>"
+"ActionCardShortDescPOTION": "Verzaubert den Spieler"
+"ActionCardShortDescTIME": "Stellt die Zeit um"
+"ActionCardShortDescWEATHER": "Stellt das Wetter um"
+"ActionCardShortDescVELOCITY": "Schubst den Spieler"
+"ActionCardShortDescSETTEMPORARYBLOCK": "Setzt einen Block\n(Temporär)"
+"ActionCardShortDescSETBLOCK": "Setzt einen Block"
+"ActionCardShortDescREPEAT": "Wiederholt den Aktionsblock"
+"ActionCardShortDescTRIGGER": "Führt einen Aktionsblock aus"
+"ActionCardShortDescSTOP": "Stoppt den Aktionsblock"
+"ActionCardShortDescWAIT": "Wartet einen Moment"
+"ActionCardShortDescPLATFORM": "Startet eine Plattform"
