--- a/Language/packs/parkour_de.yml
+++ b/Language/packs/parkour_de.yml
@@ -277,11 +277,11 @@
 "actionCardInfoTextTRIGGER": "%{parkour/actionCardInfoTRIGGER}%"
 "BuildMenuName": "Baumenü"
 "ParkourBlocks": "Parkourblöcke"
-"ParkourBlocksLore": "Zeigt alle Parkourblöcke an."
+"ParkourBlocksLore": "Zeigt alle Parkourblöcke an"
 "ActionCards": "Aktionskarten"
-"ActionCardsLore": "Zeigt alle Parkourblöcke an."
+"ActionCardsLore": "Zeigt alle Aktionskarten an"
 "ParkourSettings": "Einstellungen"
-"ParkourSettingsLore": "Zeigt alle Einstellungen an."
+"ParkourSettingsLore": "Zeigt alle Einstellungen an"
 "ActionCardBuildMenuUnlocked": "Freigeschaltet"
 "ActionCardBuildMenuNeedsLevel": "Verfügbar ab Level &6&l<level>"
 "ActionCardShortDescPOTION": "Verzaubert den Spieler"
