Added more translations for settings

--- a/Language/packs/parkour_de.yml
+++ b/Language/packs/parkour_de.yml
@@ -54,13 +54,14 @@
 "canOnlyRateInPlayMode": "Der Parkour kann erst im Spielmodus bewertet werden."
 "canOnlyRemoveInBuildMode": "Spieler können nur im Baumodus entfernt werden."
 "parkourSpawnHasBeenSet": "Der Parkour Spawn wurde gesetzt."
-"thisFunctionOnlyInBuildMode": "Diese Funktion ist nur im Baumodus verfügbar."
+"thisFunctionOnlyInBuildMode": "Diese Funktion ist nur im Baumodus verfüg
+."
 "settingsHeader": "----- Einstellungen -----"
 "sideBar": "Seitenleiste"
 "bossBar": "Bossleiste"
 "actionBar": "Aktionsleiste"
 "topListHolograms": "Toplisten Hologramme"
-"clickToToggleBar": "Klicke hier, um die <bar>\nzu aktivieren oder deaktivieren."
+"clickToToggleBar": "Klicke hier, um diese\nEinstellung umzustellen."
 "abortedRunParkourIsInBuildMode": "Testlauf abgebrochen, der Parkour ist im Baumodus."
 "somethingWentHorriblyWrongError": "Es gab einen schwerwiegenden Fehler."
 "toCheckpointItem": "Zum Checkpoint"
@@ -300,3 +301,7 @@
 "SetNameItemLore": "Gib deinem Parkour einen\nNamen, klicke dazu hier."
 "SetNameSignMenu1": "Wähle einen"
 "SetNameSignMenu2": "Parkournamen..."
+"RateThisMap": "Wie hat dir diese Karte gefallen?"
+"DoNotAskMeAgain": "Frag mich nicht mehr"
+"NoLongerAskingYou": "Du wirst nicht länger danach gefragt."
+"RatingSuggestion": "Kartenbewertung vorschlagen"
