--- a/Language/packs/parkour_de.yml
+++ b/Language/packs/parkour_de.yml
@@ -301,7 +301,7 @@
 "SetNameItemLore": "Gib deinem Parkour einen\nNamen, klicke dazu hier."
 "SetNameSignMenu1": "Wähle einen"
 "SetNameSignMenu2": "Parkournamen..."
-"RateThisMap": "Wie hat dir diese Karte gefallen?"
+"RateThisMap": "Wie hat dir die Karte von <user> gefallen?"
 "DoNotAskMeAgain": "Frag mich nicht mehr"
 "NoLongerAskingYou": "Du wirst nicht länger danach gefragt."
 "RatingSuggestion": "Kartenbewertung vorschlagen"
